linux (3.2.73-2) UNRELEASED; urgency=medium

  * splice: sendfile() at once fails for big files (Closes: #785189)

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 22 Nov 2015 23:43:42 +0000

linux (3.2.73-1) wheezy; urgency=medium

  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.72
    - xen/gntdevt: Fix race condition in gntdev_release()
    - [armel/ixp4xx] crypto: Remove bogus BUG_ON on scattered dst buffer
    - target/iscsi: Fix double free of a TUR followed by a solicited NOPOUT
    - md/raid1: extend spinlock to protect raid1_end_read_request against
      inconsistencies
    - target: REPORT LUNS should return LUN 0 even for dynamic ACLs
    - [mips*] Fix sched_getaffinity with MT FPAFF enabled
    - xhci: fix off by one error in TRB DMA address boundary check
    - rds: fix an integer overflow test in rds_info_getsockopt()
    - perf: Fix fasync handling on inherited events
    - [mips*] Make set_pte() SMP safe.
    - ocfs2: fix BUG in ocfs2_downconvert_thread_do_work()
    - net: Clone skb before setting peeked flag
    - net: Fix skb_set_peeked use-after-free bug
    - [x86] ldt: Make modify_ldt synchronous
    - [x86] ldt: Correct LDT access in single stepping logic
    - [x86] ldt: Correct FPU emulation access to LDT
    - dm btree: add ref counting ops for the leaves of top level btrees
    - libiscsi: Fix host busy blocking during connection teardown
    - libfc: Fix fc_fcp_cleanup_each_cmd()
    - ipc,sem: fix use after free on IPC_RMID after a task using same semaphore
      set exits
    - [x86] ldt: Further fix FPU emulation
    - net: Fix RCU splat in af_key
    - sctp: donot reset the overall_error_count in SHUTDOWN_RECEIVE state
    - [sparc] Fix userspace FPU register corruptions. (Closes: #789180)
    - rc-core: fix remove uevent generation
    - PCI: Fix TI816X class code quirk
    - mac80211: enable assoc check for mesh interfaces
    - PCI: Add VPD function 0 quirk for Intel Ethernet devices