@@ -1,6 +1,15 @@
 linux (3.2.73-2) UNRELEASED; urgency=medium
 
   * splice: sendfile() at once fails for big files (Closes: #785189)
+  * drm, agp: Update to 3.4.110:
+    - drm/radeon: take the mode_config mutex when dealing with hpds (v2)
+    - [x86] agp/intel: Fix typo in needs_ilk_vtd_wa()
+    - [x86] Revert "drm/i915: Don't skip request retirement if the active list
+      is empty" (regression in 3.4.109) (Closes: #805880)
+    - Revert "drm/radeon: Use drm_calloc_ab for CS relocs"
+      (regression in 3.4.109)
+    - drm/radeon: partially revert "fix VM_CONTEXT*_PAGE_TABLE_END_ADDR
+      handling" (regression in 3.4.109)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 22 Nov 2015 23:43:42 +0000
 
